contract/arena/compile_err.txt
    Checking arena v0.1.0 (/home/user/inversearena-frontend/contract/arena)
error[E0063]: missing field `finished` in initializer of `RoundState`
  --> arena/src/test.rs:70:9
   |
70 |         RoundState {
   |         ^^^^^^^^^^ missing `finished`

warning: use of deprecated method `soroban_sdk::Env::register_stellar_asset_contract`: use [Env::register_stellar_asset_contract_v2]
   --> arena/src/test.rs:668:27
    |
668 |     let contract_id = env.register_stellar_asset_contract(admin.clone());
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: unused variable: `asset`
   --> arena/src/test.rs:670:9
    |
670 |     let asset = StellarAssetClient::new(env, &contract_id);
    |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_asset`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `token`
   --> arena/src/test.rs:713:10
    |
713 |     let (token, token_id) = setup_token(&env, &admin);
    |          ^^^^^ help: if this is intentional, prefix it with an underscore: `_token`

For more information about this error, try `rustc --explain E0063`.
warning: `arena` (lib test) generated 3 warnings
error: could not compile `arena` (lib test) due to 1 previous error; 3 warnings emitted
